<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color6"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purpledk"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_left"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/includeFileUpload_myCharacter"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <com.knowledge_seek.growCheck.util.MyScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color5"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/iv_my_animal_01"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/animal_01_01" />

                <ImageView
                    android:id="@+id/iv_my_animal_02"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="2"
                    android:src="@drawable/animal_01_02" />

                <ImageView
                    android:id="@+id/iv_my_animal_03"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="3"
                    android:src="@drawable/animal_01_03" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow>

                        <ImageView
                            android:id="@+id/iv_animal_00"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_00" />

                        <ImageView
                            android:id="@+id/iv_animal_01"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_01" />

                        <ImageView
                            android:id="@+id/iv_animal_02"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_02" />

                        <ImageView
                            android:id="@+id/iv_animal_03"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_03" />

                        <ImageView
                            android:id="@+id/iv_animal_04"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_04" />
                    </TableRow>

                    <TableRow>

                        <ImageView
                            android:id="@+id/iv_animal_05"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_05" />

                        <ImageView
                            android:id="@+id/iv_animal_06"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_06" />

                        <ImageView
                            android:id="@+id/iv_animal_07"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_07" />

                        <ImageView
                            android:id="@+id/iv_animal_08"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_08" />

                        <ImageView
                            android:id="@+id/iv_animal_09"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_09" />
                    </TableRow>

                    <TableRow>

                        <ImageView
                            android:id="@+id/iv_animal_10"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_10" />

                        <ImageView
                            android:id="@+id/iv_animal_11"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_11" />

                        <ImageView
                            android:id="@+id/iv_animal_12"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_12" />

                        <ImageView
                            android:id="@+id/iv_animal_13"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_13" />

                        <ImageView
                            android:id="@+id/iv_animal_14"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_14" />
                    </TableRow>

                    <TableRow>

                        <ImageView
                            android:id="@+id/iv_animal_15"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_15" />

                        <ImageView
                            android:id="@+id/iv_animal_16"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_16" />

                        <ImageView
                            android:id="@+id/iv_animal_17"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_17" />

                        <ImageView
                            android:id="@+id/iv_animal_18"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_18" />

                        <ImageView
                            android:id="@+id/iv_animal_19"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:alpha="0.1"
                            android:src="@drawable/animal_19" />
                    </TableRow>
                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age0" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age1" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age2" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age3" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age4" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age5" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age6" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age7" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age8" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age9" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age10" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age11" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age12" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age13" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age14" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age15" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age16" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age17" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age18" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/includeMyCharacter_age19" />
                    </TableRow>

                </TableLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_gravity="right"
                android:text="@string/includeMyCharacter_sign"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

    </com.knowledge_seek.growCheck.util.MyScrollView>
</LinearLayout>